# MBTA_microcontroller

./: .gitignore  README.md
Microcontroller_Rust/: README.md
Microcontroller_Rust/forest_hills_departure/: Cargo.toml
Microcontroller_Rust/forest_hills_departure/src/: ht16k33_clock.rs  lib.rs  main.rs  ssd1306_screen.rs
Raspberry_Pi_Python/: README.md  display.py  requirements.txt
Raspberry_Pi_Rust/: README.md  get_stations.py
Raspberry_Pi_Rust/clock_test/: Cargo.toml
Raspberry_Pi_Rust/clock_test/src/: main.rs
Raspberry_Pi_Rust/forest_hills_departure/: Cargo.toml
Raspberry_Pi_Rust/forest_hills_departure/.cargo/: config.toml
Raspberry_Pi_Rust/forest_hills_departure/src/: ht16k33_clock.rs  lib.rs  main.rs  ssd1306_screen.rs  train_time.rs
Raspberry_Pi_Rust/forrest_hills_departure/: Cargo.toml
Raspberry_Pi_Rust/forrest_hills_departure/src/: main.rs
Raspberry_Pi_Rust/led_test/: Cargo.toml
Raspberry_Pi_Rust/led_test/src/: main.rs
Raspberry_Pi_Rust/screen_test/: Cargo.toml
Raspberry_Pi_Rust/screen_test/src/: main.rs
src/: lib.rs  main.rs  ssd1306_screen.rs  train_time.rs
