[package]
name = "forest_hills_departure"
version = "0.1.0"
authors = ["Rory Coffey <coffeyrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# alloc-no-stdlib = "2.0.1"
chrono = {version = "0.4", default-features = false}
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.5"
embedded-graphics = "0.6"
embedded-hal = "0.2"
heapless = "0.5"
ht16k33 = {version = "0.4", default-features = false}
panic-halt = "0.2"
# reqwest = {version = "0.10.0-alpha.2", features = ["blocking", "json"]}
# serde_json = "1.0"
ssd1306 = "0.4"
stm32f3xx-hal = {version = "0.5", features = ["stm32f303xb"]}
