[package]
name = "forest_hills_departure"
version = "0.1.0"
authors = ["Rory Coffey <coffeyrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ht16k33 = "0.4"
chrono = "0.4"
lazy_static = "1.4"
reqwest = {version = "0.10.0-alpha.2", features = ["blocking", "json"]}
serde_json = "1.0"
rppal = {version = "0.11", features = ["hal-unproven"]}
