[package]
name = "screen_test"
version = "0.1.0"
authors = ["Rory Coffey <coffeyrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sh1106 = "0.3.3"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.3"

[dependencies.rppal]
version = "0.11.3"
features = ["hal-unproven"]
